--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
 
   <main>
+    
+
 <img src="#" alt="pokemon" class="pokemon__image">
 
 <h1 class="pokemon__data">
@@ -29,11 +31,18 @@
 <button class="button btn-next">Next &gt;</button>
 </div>
 <img src="imagens/pokedex.png" alt="pokedex" class="pokedex">
+
   
-  
+<div class="audio-container">
+  <audio id="myAudio" controls loop autoplay>
+    <source src="Musica/1-01. Opening.flac" type="audio/mp3">
+  </audio>
+  <img id="audioIcon" src="Musica/icone.png" alt="Ícone de Áudio">
+</div>
+
   </main>
   
 
-
+ 
 </body>
 </html>
